Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9412

A invalid memory write in llapi_layout_to_lum

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • None
    • None
    • 3
    • 9223372036854775807

      valgrind found a bug in llapi_layout_to_lum()

       

      ==8402== Invalid write of size 4
      ==8402==    at 0x41AA66: llapi_layout_to_lum (liblustreapi_layout.c:620)
      ==8402==    by 0x41AE2C: llapi_layout_file_open (liblustreapi_layout.c:1460)
      ==8402==    by 0x408F4A: lfs_component_create (lfs.c:728)
      ==8402==    by 0x40B8BB: lfs_setstripe (lfs.c:1301)
      ==8402==    by 0x41F17E: Parser_execarg (parser.c:115)
      ==8402==    by 0x409A37: main (lfs.c:5467)
      ==8402==  Address 0x4e56a60 is 32 bytes inside a block of size 176 free'd
      ==8402==    at 0x4A06C20: realloc (vg_replace_malloc.c:662)
      ==8402==    by 0x41A91B: llapi_layout_to_lum (liblustreapi_layout.c:559)
      ==8402==    by 0x41AE2C: llapi_layout_file_open (liblustreapi_layout.c:1460)
      ==8402==    by 0x408F4A: lfs_component_create (lfs.c:728)
      ==8402==    by 0x40B8BB: lfs_setstripe (lfs.c:1301)
      ==8402==    by 0x41F17E: Parser_execarg (parser.c:115)
      ==8402==    by 0x409A37: main (lfs.c:5467)
      
      

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: